syntax = "proto3";

package org.project_planton.provider.kubernetes.kubernetessolroperator.v1;

import "org/project_planton/provider/kubernetes/kubernetessolroperator/v1/api.proto";
import "org/project_planton/provider/kubernetes/provider.proto";

//kubernetes-solr-operator stack-input
message KubernetesSolrOperatorStackInput {
  //target cloud-resource
  KubernetesSolrOperator target = 1;
  //provider-config
  org.project_planton.provider.kubernetes.KubernetesProviderConfig provider_config = 2;
}
